syntax = "proto3";

import "UserIdentity.proto";

message Player {
    string user_id = 1;
}

message PlayersGetUserDataResponse {
    optional UserData data = 1;
}

message PlayerListResponse {
    repeated Player players = 1;
}

message GetPlayerDataRequest {
    string userId = 1;
}

message GetPlayersInSceneRequest {}
message GetConnectedPlayersRequest {}

service PlayersService {
    rpc getPlayerData(GetPlayerDataRequest) returns (PlayersGetUserDataResponse) {}
    rpc getPlayersInScene(GetPlayersInSceneRequest) returns (PlayerListResponse) {}
    rpc getConnectedPlayers(GetConnectedPlayersRequest)  returns (PlayerListResponse) {}
}